# AutoRAG-Research

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json  settings.local.json
.claude/agents/: dataset-inspector.md  implementation-specialist.md  pipeline-architecture-mapper.md  pipeline-implementer.md  pipeline-paper-analyst.md  pipeline-test-writer.md  pipeline-validator.md  qa-guardian.md  schema-architect.md  test-writer.md
.claude/commands/: check-duplication.md  commit-push.md  design-ingestor.md  implement-pipeline.md  pr.md  refactor.md  resolve-conversation.md  wrap-up.md
.claude/hooks/: lint-file.sh  permission-gates.py  permission-reviewer.py  stop-check.sh
.codex/: AGENTS.md  config.toml
.codex/agents/: dataset-inspector.toml  implementation-specialist.toml  pipeline-architecture-mapper.toml  pipeline-implementer.toml  pipeline-paper-analyst.toml  pipeline-test-writer.toml  pipeline-validator.toml  schema-architect.toml  test-writer.toml
.github/ISSUE_TEMPLATE/: new-dataset-ingestor.md  new-pipeline.md
.github/workflows/: claude.yml  main.yml  on-release-main.yml  test.yml
agent-skill/: index.html
ai_instructions/: dataset_ingestor_workflow.md  dataset_inspector.md  db_pattern.md  db_schema.md  implementation_specialist.md  metric_implementation.md  pipeline_architecture_mapper.md  pipeline_checklist.md  pipeline_implementer.md  pipeline_implementer_workflow.md  pipeline_paper_analyst.md  pipeline_test_writer.md  pipeline_validator.md  plugin_architecture.md  schema_architect.md  schema_migration.md  test_code_generation_instructions.md  test_writer.md  utility_reference.md
autorag_research/: __init__.py  config.py  exceptions.py  executor.py  injection.py  plugin_registry.py  retrieval_units.py  schema.py  types.py  util.py
autorag_research/cli/: __init__.py  app.py  config_path.py  config_resolver.py  main.py  utils.py
autorag_research/data/: __init__.py  arxivqa.py  base.py  beir.py  bright.py  chartqa.py  crag.py  docvqa.py  hf_storage.py  infovqa.py  kovidorev2.py  mrtydi.py  mteb.py  open_ragbench.py  postgres_binary_ingestor.py  qasper.py  ragbench.py  registry.py  restore.py  sds_kopub_vdr.py  text_mteb.py  util.py  vidore.py  vidorev2.py  vidorev3.py  visrag.py
autorag_research/embeddings/: __init__.py  base.py  bipali.py  colpali.py  infinity.py  injection.py
autorag_research/nodes/: __init__.py
autorag_research/orm/: __init__.py  caption.py  chunk.py  connection.py  document.py  experiment_result.py  file.py  image_chunk.py  metric.py  page.py  pipeline.py  query.py  repository.py  schema.py  schema_factory.py  summary.py  types.py  util.py
autorag_research/pipelines/: __init__.py  base.py
autorag_research/reporting/: __init__.py  config.py  scope.py  service.py  service_manager.py  ui.py
autorag_research/rerankers/: __init__.py  api_base.py  base.py  cohere.py  colbert.py  dynamic_rag.py  flag_embedding.py  flag_embedding_llm.py  flashrank.py  jina.py  koreranker.py  local_base.py  mixedbreadai.py  monot5.py  openvino.py  rankgpt.py  sentence_transformer.py  tart.py  upr.py  voyageai.py
autorag_research/utils/: util.py
cli/: index.html
configs/: db.yaml  experiment.yaml
configs/embedding/: infinity-colqwen2.yaml  mock.yaml  openai-large.yaml  openai-like.yaml  openai-small.yaml
configs/llm/: mock.yaml  openai-gpt4o-mini.yaml  rag-critic-3b-vllm.yaml
configs/metrics/: f1.yaml  mrr.yaml  ndcg.yaml  precision.yaml  recall.yaml  recall_5.yaml  rouge.yaml
configs/pipelines/: basic_rag.yaml  bm25_baseline.yaml  hybrid_search.yaml  naive_rag.yaml  vector_search.yaml
configs/reranker/: colbert.yaml  dynamic_rag.yaml  flag_embedding.yaml  flag_embedding_llm.yaml  flashrank.yaml  koreranker.yaml  monot5.yaml  openvino.yaml  sentence_transformer.yaml  tart.yaml
contributing/: index.html
contributing/development-setup/: index.html
contributing/pypi-release/: index.html
data/: __init__.py  util.py
datasets/: index.html
datasets/multimodal/: index.html
datasets/text/: index.html
docs/: dataset_setup.md  index.md  installation.md  modules.md
docs/agent-skill/: index.md
docs/cli/: data.md  index.md  ingest.md  init.md  run.md  show.md
docs/contributing/: development-setup.md  index.md  pypi-release.md
docs/datasets/: index.md
docs/embeddings/: index.md  infinity.md
docs/learn/: architecture.md  concepts.md  index.md
docs/metrics/: index.md
docs/pipelines/: index.md
docs/plans/: 2026-02-21-grounded-refusal-answer-correctness.md  2026-06-10-paper-fidelity-audit.md  neurips-2026-experimentation-plan-FULL.md  neurips-2026-experimentation-plan-REVISED.md  neurips-2026-experimentation-plan-review.html  neurips-2026-experimentation-plan.md
docs/plugins/: best-practices.md  cli.md  generation-pipeline.md  index.md  metrics.md  retrieval-pipeline.md  trust-align-metrics.md
docs/reference/: index.md
docs/rerankers/: cohere.md  colbert.md  flag_embedding.md  (+13 more)
embeddings/: index.html
learn/: index.html
metrics/: index.html
paper/: paper_planning.md
pipelines/: index.html
plugins/: index.html
plugins/trust_align_metrics_plugin/: README.md  pyproject.toml
plugins/trust_align_metrics_plugin/src/trust_align_metrics_plugin/: __init__.py  autoais.py  metric.py
plugins/trust_align_metrics_plugin/src/trust_align_metrics_plugin/generation/: trust_align_answer_correctness_f1.yaml  trust_align_grounded_refusal_f1.yaml
postgresql/: .env.example  docker-compose.yml
reference/: index.html
rerankers/: index.html
scripts/: beir_all.sh  dump_postgres.sh  evaluate_vidorev3_colflor_direct.py  ingest_multi_modal_no_embed.py  ingest_text_only_retrieval_dataset.py  install.sh  setup_ui_dev_databases.py  upload_postgres.py
search/: search_index.json
skills/: README.md
tests/: conftest.py  mock.py  test_foo.py  test_plugin_registry.py  test_project_metadata.py  test_release_workflow.py  util.py
tutorial/: index.html
(+756 files in other folders)
